Admin Messaging 90% Comp

--- a/public/admin/messages/messages.html
+++ b/public/admin/messages/messages.html
@@ -128,21 +128,21 @@
           <div class="foot">
             <div class="left">
               <div class="buttons">
-                <button title="attach-file" onclick="document.getElementById('Image').click()" type="button">
+                <button  class="small-scrn-none" title="attach-file" onclick="document.getElementById('Image').click()" type="button">
                   <svg xmlns="http://www.w3.org/2000/svg" height="16px" viewBox="0 -960 960 960" width="16px"
                     fill="#454746">
                     <path
                       d="M720-330q0 104-73 177T470-80q-104 0-177-73t-73-177v-370q0-75 52.5-127.5T400-880q75 0 127.5 52.5T580-700v350q0 46-32 78t-78 32q-46 0-78-32t-32-78v-330q0-17 11.5-28.5T400-720q17 0 28.5 11.5T440-680v330q0 13 8.5 21.5T470-320q13 0 21.5-8.5T500-350v-350q-1-42-29.5-71T400-800q-42 0-71 29t-29 71v370q-1 71 49 120.5T470-160q70 0 119-49.5T640-330v-350q0-17 11.5-28.5T680-720q17 0 28.5 11.5T720-680v350Z" />
                   </svg>
                 </button>
-                <button type="button" title="insertOrderedList" onclick="formatDoc('insertOrderedList')">
+                <button  class="small-scrn-none" type="button" title="insertOrderedList" onclick="formatDoc('insertOrderedList')">
                   <svg xmlns="http://www.w3.org/2000/svg" height="16px" viewBox="0 -960 960 960" width="16px"
                     fill="#454746">
                     <path
                       d="M710-80q-13 0-21.5-8.5T680-110q0-13 8.5-21.5T710-140h70v-30h-30q-13 0-21.5-8.5T720-200q0-13 8.5-21.5T750-230h30v-30h-70q-13 0-21.5-8.5T680-290q0-13 8.5-21.5T710-320h90q17 0 28.5 11.5T840-280v40q0 17-11.5 28.5T800-200q17 0 28.5 11.5T840-160v40q0 17-11.5 28.5T800-80h-90Zm0-280q-13 0-21.5-8.5T680-390v-80q0-17 11.5-28.5T720-510h60v-30h-70q-13 0-21.5-8.5T680-570q0-13 8.5-21.5T710-600h90q17 0 28.5 11.5T840-560v70q0 17-11.5 28.5T800-450h-60v30h70q13 0 21.5 8.5T840-390q0 13-8.5 21.5T810-360H710Zm60-280q-13 0-21.5-8.5T740-670v-150h-30q-13 0-21.5-8.5T680-850q0-13 8.5-21.5T710-880h60q13 0 21.5 8.5T800-850v180q0 13-8.5 21.5T770-640ZM160-200q-17 0-28.5-11.5T120-240q0-17 11.5-28.5T160-280h400q17 0 28.5 11.5T600-240q0 17-11.5 28.5T560-200H160Zm0-240q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520h400q17 0 28.5 11.5T600-480q0 17-11.5 28.5T560-440H160Zm0-240q-17 0-28.5-11.5T120-720q0-17 11.5-28.5T160-760h400q17 0 28.5 11.5T600-720q0 17-11.5 28.5T560-680H160Z" />
                   </svg>
                 </button>
-                <button type="button" title="insertUnorderedList" onclick="formatDoc('insertUnorderedList')">
+                <button  class="small-scrn-none" type="button" title="insertUnorderedList" onclick="formatDoc('insertUnorderedList')">
                   <svg xmlns="http://www.w3.org/2000/svg" height="16px" viewBox="0 -960 960 960" width="16px"
                     fill="#454746">
                     <path
@@ -156,16 +156,16 @@
                       d="M280-280q-83 0-141.5-58.5T80-480q0-83 58.5-141.5T280-680h120q17 0 28.5 11.5T440-640q0 17-11.5 28.5T400-600H280q-50 0-85 35t-35 85q0 50 35 85t85 35h120q17 0 28.5 11.5T440-320q0 17-11.5 28.5T400-280H280Zm80-160q-17 0-28.5-11.5T320-480q0-17 11.5-28.5T360-520h240q17 0 28.5 11.5T640-480q0 17-11.5 28.5T600-440H360Zm200 160q-17 0-28.5-11.5T520-320q0-17 11.5-28.5T560-360h120q50 0 85-35t35-85q0-50-35-85t-85-35H560q-17 0-28.5-11.5T520-640q0-17 11.5-28.5T560-680h120q83 0 141.5 58.5T880-480q0 83-58.5 141.5T680-280H560Z" />
                   </svg>
                 </button>
-                <button type="button" title="unlink" onclick="formatDoc('unlink')">
+                <button  class="small-scrn-none" type="button" title="unlink" onclick="formatDoc('unlink')">
                   <svg xmlns="http://www.w3.org/2000/svg" height="16px" viewBox="0 -960 960 960" width="16px"
                     fill="#454746">
                     <path
                       d="m625-449-71-71h46q17 0 28.5 11.5T640-480q0 10-4 18t-11 13ZM820-84q-11 11-28 11t-28-11L84-764q-11-11-11-28t11-28q11-11 28-11t28 11l680 680q11 11 11 28t-11 28ZM280-280q-83 0-141.5-58.5T80-480q0-69 42-123t108-71l74 74h-24q-50 0-85 35t-35 85q0 50 35 85t85 35h120q17 0 28.5 11.5T440-320q0 17-11.5 28.5T400-280H280Zm80-160q-17 0-28.5-11.5T320-480q0-17 11.5-28.5T360-520h25l79 80H360Zm380 112q-9-14-6.5-30t16.5-25q23-17 36.5-42t13.5-55q0-50-35-85t-85-35H560q-17 0-28.5-11.5T520-640q0-17 11.5-28.5T560-680h120q83 0 141.5 58.5T880-480q0 49-22.5 91.5T795-318q-14 9-30 6.5T740-328Z" />
                   </svg>
                 </button>
-                <button type="button" title="show-code" id="show-code" data-active="false">&lt;/&gt;</button>
+                <button  class="small-scrn-none" type="button" title="show-code" id="show-code" data-active="false">&lt;/&gt;</button>
               </div>
-              <select title="Format" onchange="formatDoc('formatBlock', this.value); this.selectedIndex=0;">
+              <select  class="small-scrn-none" title="Format" onchange="formatDoc('formatBlock', this.value); this.selectedIndex=0;">
                 <option value="" selected="" hidden="" disabled="">Format</option>
                 <option value="h1">Heading 1</option>
                 <option value="h2">Heading 2</option>
@@ -175,7 +175,7 @@
                 <option value="h6">Heading 6</option>
                 <option value="p">Paragraph</option>
               </select>
-              <select title="font Size" onchange="formatDoc('fontSize', this.value); this.selectedIndex=0;">
+              <select  class="small-scrn-none" title="font Size" onchange="formatDoc('fontSize', this.value); this.selectedIndex=0;">
                 <option value="" selected="" hidden="" disabled="">Font size</option>
                 <option value="1">Extra small</option>
                 <option value="2">Small</option>
@@ -185,11 +185,11 @@
                 <option value="6">Extra Large</option>
                 <option value="7">Big</option>
               </select>
-              <div class="color">
+              <div class="color small-scrn-none">
                 <span>Color</span>
                 <input title="text-color" type="color" oninput="formatDoc('foreColor', this.value); ">
               </div>
-              <div class="color">
+              <div class="color small-scrn-none">
                 <span>Background</span>
                 <input title="Bg Color" type="color" oninput="formatDoc('hiliteColor', this.value); ">
               </div>
@@ -228,7 +228,7 @@
                 </span>
               </div>
               <span class="edit-profile hidden">
-                <i class="fa-duotone fa-user-pen"></i>
+                <!-- <i class="fa-duotone fa-user-pen"></i> -->
                 <a href="/admin/">Edit Profile</a>
               </span>
             </div>
@@ -290,8 +290,8 @@
           <div class="dashboard-content-title">
             <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="javascript:history.back()" class="go-back">
-              <!-- <i class="fa-solid fa-arrow-left"></i> -->
-              <i class="fa-duotone fa-solid fa-house"></i>
+              <i class="fa-duotone fa-solid fa-arrow-left"></i>
+              <!-- <i class="fa-duotone fa-solid fa-house"></i> -->
               <!-- <p>Home</p>xxxxxx -->
             </a>
             <h1>Messages</h1>
@@ -302,7 +302,8 @@
             <div class="messages">
               <div class="scroll">
                 <!-- <h3>Messages</h3> -->
-                <div id="messageBody" class="messageBody">
+                <div class="inner-body" id="mail-body"></div>
+                <div id="messageBody" class="messageBody" style="display: flex;">
                   <div class="loader">
                     getting messages...
                   </div>
@@ -316,7 +317,7 @@
                 </div>
               </div>
             </div>
-            <div class="container">
+            <div class="container" style="display: flex;" id="compose-container">
               <button type="button" title="compose" onclick="toggleModal()">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                   <path d="M0 0h24v24H0z" fill="none" />
